--- a/Asst6WebsiteReCode/index.html
+++ b/Asst6WebsiteReCode/index.html
@@ -33,7 +33,7 @@
          <div class="navbar-nav ml-auto">
           <!-- li class="nav-item active" -->
           <span class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="#">Homeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
               <span class="sr-only">(current)</span>
             </a>
           </span>
