--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     <!-- Content Row -->
     <div class="row">
 
-    <section> <div class="col-md-4 mb-5">
+    <section> 
+      <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
           <!-- was h2 -->
@@ -98,7 +99,7 @@
         </div>
       </div>
     </section>
-      
+  </div>
       <!-- /.col-md-4 -->
       <section>  <div class="col-md-4 mb-5">
         <div class="card h-100">
